fix(variables): changed small and extra small font sizes because too small

--- a/src/assets/style/generals/_variables.scss
+++ b/src/assets/style/generals/_variables.scss
@@ -19,8 +19,8 @@ $grd-brand-lt: linear-gradient(45deg, $clr-brand-primary, $clr-brand-secondary, 
 // Font settings
 $font-size-base: 16px;
 
-$font-size-xs: .5rem;
-$font-size-s: .75rem;
+$font-size-xs: .75rem;
+$font-size-s: .875rem;
 $font-size-m: 1rem;
 $font-size-l: 1.5rem;
 $font-size-xl: 2rem;
